data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1865.wast
;; - **Test 6**:   Design a function with a `loop` that includes a `br_if` instruction that breaks out with a type incompatible with the loop’s expected input type.   - **Reason**: Checks backward branches in loops for type consistency.   - **Constraint**: The loop input type must match values pushed upon breaking.

(assert_invalid
  (module
    (func $backward-branch-type-mismatch 
      (loop $loop (result i32) ;; The loop expects i32 result type
        (i32.const 42)
        (br_if 0 (i64.const 1)) ;; Type mismatch: `i64.const 1` does not match expected `i32`
      )
    )
  )
  "type mismatch"
)